1.2-kripken/build/testoverlay.c.log
[1m../SDL-1.2.15/testoverlay.c:517:10: [0m[0;1;31merror: [0m[1mno member named 'colorkey' in 'struct SDL_PixelFormat'[0m
                format.colorkey=0;
[0;1;32m                ~~~~~~ ^
[0m1 error generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
